# GCO

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  resume-codex.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260525_0001_initial_schema.py  20260525_0002_create_tenant_profiles.py  20260525_0003_create_patients.py  20260526_0004_create_clinical_records.py  20260526_0005_complete_phase_k.py
backend/app/: __init__.py  main.py  models.py
backend/app/api/: deps.py  health.py  ws.py
backend/app/api/v1/: appointments.py  auth.py  calls.py  clinical_records.py  errors.py  exam_requests.py  panel.py  patients.py  prescriptions.py  rooms.py  router.py  tenant.py  triage.py
backend/app/commands/: __init__.py  create_admin.py  upsert_tenant_profile.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/modules/: __init__.py
backend/app/modules/appointments/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/audit/: __init__.py  models.py  repository.py  service.py
backend/app/modules/auth/: __init__.py  exceptions.py  models.py  permissions.py  repository.py  schemas.py  service.py
backend/app/shared/: exceptions.py  repository.py
backend/tests/: conftest.py  test_calls_service.py  test_clinical_records_service.py  test_config.py  test_patients_service.py  test_permissions.py  test_phase_k_services.py  test_security.py  test_tenant_service.py
(+608 files in other folders)
